--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     <div>
         <a href="/movies/savedfilms">Sparade filmer</a>
         <br>
-        <a href="/movies/search">kanske söka film</a>
+        <a href="/movies/search">söka film</a>
         <br>
         <a href="/movies/info">Film info</a>
         <br>
